# notidium

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-04-18-notidium-install-and-release-design.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: .gitkeep
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: CodeBlock.tsx  CommandPalette.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  MarkdownPreview.tsx  Skeleton.tsx  TagInput.tsx  ThemedToaster.tsx  Tooltip.tsx
frontend/src/hooks/: useNotes.ts  useSearch.ts  useStats.ts  useTags.ts  useUploadAttachment.ts
frontend/src/pages/: HomePage.tsx  NotePage.tsx  NotesPage.tsx  SearchPage.tsx  StatsPage.tsx  TagsPage.tsx
frontend/src/stores/: notesStore.ts  searchStore.ts  settingsStore.ts  uiStore.ts
frontend/src/utils/: cn.ts  frontmatter.ts  match-union.ts
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/embed/: chunker.rs  embedder.rs  mod.rs
src/mcp/: mod.rs  server.rs
src/search/: fulltext.rs  mod.rs  semantic.rs
src/service/: linux.rs  macos.rs  mod.rs  render.rs  windows.rs
src/store/: manifest.rs  metadata_db.rs  mod.rs  note_store.rs
tests/: mcp_tools_test.rs
